Add imagePullPolicy to init container

--- a/helm-ambassador/values.yaml
+++ b/helm-ambassador/values.yaml
@@ -12,6 +12,7 @@ ambassador:
   initContainers:
   - name: load-plugins
     image: account-dc-plugin:latest
+    imagePullPolicy: "IfNotPresent"
     volumeMounts:
     - name: plugins
       mountPath: "/etc/ambassador-plugins"
